// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly When user is authorized 1`] = `
<React.Fragment>
  <header
    className="page-header className text"
  >
    <div
      className="logo"
    >
      <Link
        className="logo__link"
        to="/"
      >
        <span
          className="logo__letter logo__letter--1"
        >
          W
        </span>
        <span
          className="logo__letter logo__letter--2"
        >
          T
        </span>
        <span
          className="logo__letter logo__letter--3"
        >
          W
        </span>
      </Link>
    </div>
    <div
      className="user-block"
    >
      <div
        className="user-block__avatar"
        onClick={[Function]}
      >
        <img
          alt="User avatar"
          height="63"
          src="/avatar.jpg"
          width="63"
        />
      </div>
    </div>
  </header>
</React.Fragment>
`;

exports[`Header renders correctly When user is not authorized 1`] = `
<React.Fragment>
  <header
    className="page-header "
  >
    <div
      className="logo"
    >
      <Link
        className="logo__link"
        to="/"
      >
        <span
          className="logo__letter logo__letter--1"
        >
          W
        </span>
        <span
          className="logo__letter logo__letter--2"
        >
          T
        </span>
        <span
          className="logo__letter logo__letter--3"
        >
          W
        </span>
      </Link>
    </div>
    <div
      className="user-block"
    >
      <Link
        className="user-block__link"
        to="/login"
      >
        Sign in
      </Link>
    </div>
  </header>
</React.Fragment>
`;

exports[`Header renders correctly With child 1`] = `
<React.Fragment>
  <header
    className="page-header "
  >
    <div
      className="logo"
    >
      <Link
        className="logo__link"
        to="/"
      >
        <span
          className="logo__letter logo__letter--1"
        >
          W
        </span>
        <span
          className="logo__letter logo__letter--2"
        >
          T
        </span>
        <span
          className="logo__letter logo__letter--3"
        >
          W
        </span>
      </Link>
    </div>
    <p>
      Some test child
    </p>
    <div
      className="user-block"
    >
      <Link
        className="user-block__link"
        to="/login"
      >
        Sign in
      </Link>
    </div>
  </header>
</React.Fragment>
`;

exports[`Header renders correctly Without user block 1`] = `
<React.Fragment>
  <header
    className="page-header "
  >
    <div
      className="logo"
    >
      <Link
        className="logo__link"
        to="/"
      >
        <span
          className="logo__letter logo__letter--1"
        >
          W
        </span>
        <span
          className="logo__letter logo__letter--2"
        >
          T
        </span>
        <span
          className="logo__letter logo__letter--3"
        >
          W
        </span>
      </Link>
    </div>
  </header>
</React.Fragment>
`;
